--- a/main.html
+++ b/main.html
@@ -1,16 +1,97 @@
 <!DOCTYPE html>
 
 <html>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+  <body>
+    <!-- the entire body must be written by student -->
+    <div class="container">
+      <h2>Bootstrap Carousel</h2>
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- here carousel is changing the slide suddenly without any slide but slide is using for smooth transition or slide -->
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+        <!-- Wrapper for slides -->
+        <!-- which will wrap the slides instead of list one by one -->
+        <div class="carousel-inner">
+          <div class="item first-slide">
+            <img
+              src="images\img1.jpg"
+              id="first_image"
+              alt="img1"
+              style="width: 100%"
+            />
+            <div class="carousel-caption">
+              <h3>First Slide</h3>
+              <p>This is first slide!</p>
+            </div>
+          </div>
 
-</body>
+          <div class="item second-slide">
+            <img
+              src="images\img2.jpg"
+              id="second_image"
+              alt="img2"
+              style="width: 100%"
+            />
+            <div class="carousel-caption">
+              <h3>Second Slide</h3>
+              <p>This is second slide!</p>
+            </div>
+          </div>
 
+          <div class="item active third-slide">
+            <img
+              src="images\img3.jpg"
+              id="third_image"
+              alt="img3"
+              style="width: 100%"
+            />
+            <div class="carousel-caption">
+              <h3>Third Slide</h3>
+              <p>This is third slide!</p>
+            </div>
+          </div>
+
+          <div class="item fourth-slide">
+            <img
+              src="images\img4.jpg"
+              id="fourth_image"
+              alt="img4"
+              style="width: 100%"
+            />
+            <div class="carousel-caption">
+              <h3>Fourth Slide</h3>
+              <p>This is fourth slide!</p>
+            </div>
+          </div>
+
+          <div class="item fifth-slide">
+            <img
+              src="images\img5.jpg"
+              id="fifth_image"
+              alt="img5"
+              style="width: 100%"
+            />
+            <div class="carousel-caption">
+              <h3>Fifth Slide</h3>
+              <p>This is fifth slide!</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+    <script type="text/javascript" src="./script.js"></script>
+  </body>
 </html>
